# Confusion_project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  create_dirs.bat
config/: detection_params.yaml  repair_policies.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: api_reference.md  development_guide.md  system_architecture.md  user_guide.md
docs/images/: system_architecture.md  system_architecture.png.txt  system_architecture.txt
launch/: confusion_system.launch
qtrobot_confusion_detection/: README.md
qtrobot_confusion_detection/launch/: confusion_detection.launch
qtrobot_confusion_detection/src/common/: CMakeLists.txt  package.xml
qtrobot_confusion_detection/src/confusion_detection/: package.xml
qtrobot_confusion_detection/src/confusion_detection/src/: confusion_classifier_node.py  face_detector_node.py  feature_extractor_node.py
qtrobot_confusion_detection/src/repair_policy/: CMakeLists.txt  package.xml
scripts/: docker_run.sh  evaluation.py  run_demo.sh  setup.sh
src/common/: CMakeLists.txt  package.xml
src/common/src/: utils.py  visualization.py
src/confusion_detection/: CMakeLists.txt  package.xml
src/confusion_detection/launch/: confusion_detection.launch
src/confusion_detection/msg/: ConfusionState.msg  FaceFeatures.msg
src/confusion_detection/src/: confusion_classifier_node.py  face_detector_node.py  feature_extractor_node.py
src/repair_policy/: CMakeLists.txt  package.xml
src/repair_policy/launch/: repair_policy.launch
src/repair_policy/src/: policy_engine_node.py  repair_strategies.py
(+2 files in other folders)
